# dedcore

./: .dedcore_cache.json  .gitignore  Cargo.toml  README.md  RELEASE.md  install.ps1  install.sh  install_dedcore.sh  package-lock.json  uninstall_dedcore.sh
benches/: file_scanning.rs  hashing.rs
dedcore-landing/: NEWSLETTER_SETUP.md  README.md  VERCEL_DEPLOYMENT.md  disable-rls-temp.sql  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  supabase-setup.sql
dedcore-landing/app/: error.tsx  page.tsx
dedcore-landing/app/admin/: error.tsx  page.tsx
dedcore-landing/app/admin/analytics/: page.tsx
dedcore-landing/app/admin/database/: page.tsx
dedcore-landing/app/admin/login/: page.tsx
dedcore-landing/app/admin/newsletter/: page.tsx
dedcore-landing/app/admin/settings/: page.tsx
dedcore-landing/app/admin/subscribers/: page.tsx
dedcore-landing/app/api/newsletter/: route.ts
dedcore-landing/app/docs/: layout.tsx  page.tsx
dedcore-landing/app/docs/advanced-usage/: page.tsx
dedcore-landing/app/docs/changelog/: page.tsx
dedcore-landing/app/docs/cli/: page.tsx
dedcore-landing/app/docs/contact/: page.tsx
dedcore-landing/app/docs/contributing/: page.tsx
dedcore-landing/components/: admin-layout.tsx  download.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  supabase-setup-notice.tsx
dedcore-landing/lib/: auth.ts  email.ts  supabase-config.ts  supabase.ts
dedcore-landing/public/: install.sh
dedcore-landing/src/app/: page.tsx
dedcore-landing/src/components/: GlassNavBar.tsx  GradientBackground.tsx  LandingClient.tsx  ThreeDedcore.tsx
packaging/: build_packages.sh
packaging/chocolatey/: dedcore.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/debian/: control  rules
packaging/homebrew/: dedcore.rb
src/: cli.rs  hashing.rs  lib.rs  main.rs  safety.rs  similarity.rs  types.rs  ui.rs
(+18 files in other folders)
