[package]
name = "dedcore"
version = "0.1.0"
edition = "2021"
authors = ["keirsalterego"]
description = "A high-performance deduplication tool"
license = "MIT"
repository = "https://github.com/keirsalterego/dedcore"
keywords = ["deduplication", "duplicate", "files", "hash", "similarity", "cleanup", "storage"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[lib]
name = "dedcore"
path = "src/lib.rs"

[[bin]]
name = "dedcore"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.40", features = ["derive"] }
glob = "0.3.0"
sha256 = "1.1.1"
sqlite = "0.37.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
rayon = "1.10.0"
sha2 = "0.10.9"
blake3 = "1.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.108"
hex = "0.4"
tempfile = "3.10"
walkdir = "2.5.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
regex = "1.11.1"
textdistance = "1.1.1"
inquire = { version = "0.6.2", features = ["date"] }
crossterm = { version = "0.25.0", features = ["event-stream"] }
dirs = "5.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
img_hash = "3.2.0"
image = { version = "0.25.6", features = ["png", "jpeg", "gif", "webp", "tiff", "bmp", "hdr"] }
memmap2 = "0.9"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true
# For even smaller binaries, you can also try 'opt-level = "z"' and 'strip = true' (Rust 1.60+)

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.3.0"
proptest = "1.1.0"
rand = "0.9.1"

[profile.bench]
debug = true

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "file_scanning"
harness = false
